Disable sandbox Fixes #16

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -202,7 +202,7 @@ apps:
   steam:
     command-chain: [ snap/command-chain/alsa-launch, bin/desktop-launch ]
     #command: bin/steam-snap.sh
-    command: usr/lib/steam/bin_steam.sh
+    command: usr/lib/steam/bin_steam.sh --no-cef-sandbox
     desktop: steam.desktop
     environment:
       HOME: $SNAP_USER_COMMON
