Revert "Moved more env to desktop-launch for consistency"
This reverts commit 11e4feb85677cd1a5f327e89826097ec796c1a58.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -83,6 +83,9 @@ plugs:
   shared-memory:
     private: true
 
+environment:
+  LD_LIBRARY_PATH: $SNAP/usr/lib/i386-linux-gnu:$SNAP/lib/i386-linux-gnu:$SNAP/usr/lib/i386-linux-gnu/pulseaudio${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
+
 package-repositories:
   - type: apt
     components: [steam]
