--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -197,6 +197,7 @@ parts:
       - steam-libs-amd64
       - steam-libs-i386
       - libappindicator3-1
+      - libpci3
       - libvkd3d1:i386
       - libvkd3d1:amd64
       - zlib1g:i386
