--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -209,6 +209,7 @@ apps:
       #LIBGL_DEBUG: verbose
       TMPDIR: $XDG_RUNTIME_DIR
       ALWAYS_USE_PULSEAUDIO: 1
+      DISABLE_WAYLAND: 1
 
     plugs:
       - shared-memory
