refactor shared-memory usage

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -102,7 +102,8 @@ plugs:
       - $HOME/Steam
   desktop:
     mount-host-font-cache: false
-  shared-memory:
+  shmem:
+    interface: shared-memory
     private: true
 
 hooks:
@@ -245,7 +246,7 @@ apps:
       ALWAYS_USE_PULSEAUDIO: 1
       DISABLE_WAYLAND: 1
     plugs:
-      - shared-memory
+      - shmem
       - desktop
       - desktop-legacy
       - wayland
