--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -202,6 +202,7 @@ parts:
       - pciutils
       - vulkan-tools # For testing
       - lsof
+      - locales-all
     override-build: |
       snapcraftctl build
       # Set the snap version from the .deb package version
