--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -89,6 +89,16 @@ layout:
     symlink: $SNAP/usr/lib/x86_64-linux-gnu/libxcb.so.1.1.0
   /usr/lib/x86_64-linux-gnu/libxcb.so.1:
     symlink: $SNAP/usr/lib/x86_64-linux-gnu/libxcb.so.1.1.0
+  /usr/lib/i386-linux-gnu/libxcb-dri3.so.0.0.0:
+    bind-file: $SNAP/usr/lib/i386-linux-gnu/libxcb-dri3.so.0.0.0
+  /usr/lib/i386-linux-gnu/libxcb-dri3.so.0:
+    symlink: $SNAP/usr/lib/i386-linux-gnu/libxcb-dri3.so.0.0.0
+  /usr/lib/i386-linux-gnu/libxcb.so.1.1.0:
+    bind-file: $SNAP/usr/lib/i386-linux-gnu/libxcb.so.1.1.0
+  /usr/lib/i386-linux-gnu/libxcb.so:
+    symlink: $SNAP/usr/lib/i386-linux-gnu/libxcb.so.1.1.0
+  /usr/lib/i386-linux-gnu/libxcb.so.1:
+    symlink: $SNAP/usr/lib/i386-linux-gnu/libxcb.so.1.1.0
   /etc/ld.so.cache:
     bind-file: $SNAP_DATA/etc/ld.so.cache
 
