Revert "Don't strip etc/fonts"
This reverts commit d893929ee21ea10874fb5909bdf72bcab5107b9b.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -256,7 +256,7 @@ parts:
       # Install the desktop file, with the icon field munged
       sed 's|Icon=steam|Icon=${SNAP}/steam.png|g' $CRAFT_PART_INSTALL/usr/share/applications/steam.desktop > $CRAFT_PART_INSTALL/steam.desktop
     prime:
-      - etc/fonts
+      - -etc/fonts
       - -usr/share/doc
       - -usr/share/man
       - -usr/share/bug
