--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -270,7 +270,6 @@ parts:
       set -eux
       cp -a /snap/core22/current/usr/lib/i386-linux-gnu/* usr/lib/i386-linux-gnu/
 
-
 apps:
   steam:
     command-chain: [ snap/command-chain/alsa-launch, bin/desktop-launch ]
@@ -306,3 +305,10 @@ apps:
       - fuse-support
       - steam-support
       - removable-media
+  report:
+    command: bin/steamreport
+    plugs:
+      - system-observe
+      - opengl
+      - x11
+      - desktop
