Add gaming-graphics-core22 content plug

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -21,26 +21,26 @@ package-repositories:
     components: [steam]
     architectures: [amd64, i386]
     key-id: BA1816EF8E75005FCF5E27A1F24AEA9FB05498B7
-  - type: apt
-    # FIXME: We need to enable both 32-bit and 64-bit architectures
-    # for this PPA, but Snapcraft doesn't let us do that with the
-    # short syntax. So use the full version instead.
+  # - type: apt
+  #   # FIXME: We need to enable both 32-bit and 64-bit architectures
+  #   # for this PPA, but Snapcraft doesn't let us do that with the
+  #   # short syntax. So use the full version instead.
 
-    # ppa: oibaf/graphics-drivers
-    url: http://ppa.launchpad.net/oibaf/graphics-drivers/ubuntu
-    suites: [jammy]
-    components: [main]
-    architectures: [amd64, i386]
-    key-id: 5ABCE68FF4633EA42E219156957D2708A03A4626
-    key-server: keyserver.ubuntu.com
+  #   # ppa: oibaf/graphics-drivers
+  #   url: http://ppa.launchpad.net/oibaf/graphics-drivers/ubuntu
+  #   suites: [jammy]
+  #   components: [main]
+  #   architectures: [amd64, i386]
+  #   key-id: 5ABCE68FF4633EA42E219156957D2708A03A4626
+  #   key-server: keyserver.ubuntu.com
 
 layout:
   /usr/lib/steam:
     bind: $SNAP/usr/lib/steam
   /usr/share/zenity:
     bind: $SNAP/usr/share/zenity
-  /usr/share/libdrm:
-    bind: $SNAP/usr/share/libdrm
+  # /usr/share/libdrm:
+  #   bind: $SNAP/usr/share/libdrm
   /usr/lib/i386-linux-gnu:
     bind: $SNAP/usr/lib/i386-linux-gnu
   /usr/lib/x86_64-linux-gnu/dri:
@@ -71,8 +71,16 @@ layout:
     symlink: $SNAP/usr/lib/x86_64-linux-gnu/libxcb.so.1.1.0
   /etc/ld.so.cache:
     bind-file: $SNAP_DATA/etc/ld.so.cache
+  /usr/share/libdrm:
+    bind: $SNAP/graphics/libdrm
+  /usr/share/drirc.d:
+    bind: $SNAP/graphics/drirc.d
 
 plugs:
+  gaming-mesa:
+    interface: content
+    target: $SNAP/graphics
+    default-provider: gaming-graphics-core22/oibaf-latest/edge
   gtk-3-themes:
     interface: content
     target: $SNAP/share/themes
@@ -102,7 +110,7 @@ hooks:
       - opengl
 
 environment:
-  LD_LIBRARY_PATH: $SNAP/usr/lib/i386-linux-gnu:$SNAP/lib/i386-linux-gnu:$SNAP/usr/lib/i386-linux-gnu/pulseaudio${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
+  LD_LIBRARY_PATH: $SNAP/graphics/lib:$SNAP/graphics/usr/lib:$SNAP/usr/lib/i386-linux-gnu:$SNAP/lib/i386-linux-gnu:$SNAP/usr/lib/i386-linux-gnu/pulseaudio${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
 
 parts:
   launcher:
@@ -269,6 +277,18 @@ parts:
       craftctl default
       set -eux
       cp -a /snap/core22/current/usr/lib/i386-linux-gnu/* usr/lib/i386-linux-gnu/
+
+  cleanup:
+    after: [ steam ]
+    plugin: nil
+    build-snaps:
+      - gaming-graphics-core22/oibaf-latest/edge
+    override-prime: |
+      set -eux
+      cd /snap/gaming-graphics-core22/current/usr/lib
+      find . -type f,l -exec rm -fv $CRAFT_PRIME/usr/lib/$CRAFT_ARCH_TRIPLET/{} \;
+      cd /snap/gaming-graphics-core22/current/usr/share
+      find . -type f,l -exec rm -fv $CRAFT_PRIME/usr/share/{} \;
 
 apps:
   steam:
