Add upower support for sleep issues

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -359,6 +359,7 @@ apps:
       - fuse-support
       - steam-support
       - removable-media
+      - uinput
       - upower-observe
   report:
     command-chain: [bin/desktop-launch]
