--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -331,6 +331,7 @@ apps:
       - removable-media
       - upower-observe
   report:
+    command-chain: [bin/desktop-launch]
     command: bin/steamreport
     plugs:
       - system-observe
@@ -339,24 +340,28 @@ apps:
       - x11
       - desktop
   vulkaninfo:
+    command-chain: [bin/desktop-launch]
     command: usr/bin/vulkaninfo
     plugs:
       - opengl
       - x11
       - desktop
   vkcube:
+    command-chain: [bin/desktop-launch]
     command: usr/bin/vkcube
     plugs:
       - opengl
       - x11
       - desktop
   glxinfo:
+    command-chain: [bin/desktop-launch]
     command: usr/bin/glxinfo
     plugs:
       - opengl
       - x11
       - desktop
   glxgears:
+    command-chain: [bin/desktop-launch]
     command: usr/bin/glxinfo
     plugs:
       - opengl
