--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -63,7 +63,7 @@ layout:
   /usr/lib/x86_64-linux-gnu/libxcb-dri3.so.0:
     symlink: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libxcb-dri3.so.0.0.0
   /usr/lib/x86_64-linux-gnu/libxcb.so.1.1.0:
-    bind-file: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libxcb.so.1.1.0
+    symlink: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libxcb.so.1.1.0
   /usr/lib/x86_64-linux-gnu/libxcb.so:
     symlink: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libxcb.so.1.1.0
   /usr/lib/x86_64-linux-gnu/libxcb.so.1:
