--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -117,6 +117,10 @@ parts:
       cp steam-snap.sh $CRAFT_PART_INSTALL/bin/
       cp desktop-launch $CRAFT_PART_INSTALL/bin/
       cp steamreport $CRAFT_PART_INSTALL/bin/
+      cp vulkaninfo $CRAFT_PART_INSTALL/bin/
+      cp vkcube $CRAFT_PART_INSTALL/bin/
+      cp glxinfo $CRAFT_PART_INSTALL/bin/
+      cp glxgears $CRAFT_PART_INSTALL/bin/
 
   alsa-mixin:
     plugin: dump
@@ -212,8 +216,11 @@ parts:
   debug-tools:
     plugin: nil
     stage-packages:
-      - vulkan-tools
-      - mesa-utils
+      - jq
+    prime:
+      - usr/bin/jq
+      - usr/lib/*/libjq.so*
+      - usr/lib/*/libonig.so*
 
   tests:
     plugin: dump
@@ -242,6 +249,10 @@ parts:
       - libpci3
       - libvulkan1:i386
       - libvulkan1:amd64
+      - libxml2:i386
+      - libxml2:amd64
+      - libicu70:i386
+      - libicu70:amd64
       - zlib1g:i386
       - zlib1g:amd64
       - xdg-utils
@@ -271,6 +282,10 @@ parts:
       - -usr/share/emacs*
       - -usr/share/lintian
       - -usr/lib/*/dri
+      - usr/lib/*/libxml2*
+      - usr/lib/*/libicu*
+      - usr/lib/*/libwayland*
+
     build-snaps: [core22]
     override-prime: |
       craftctl default
@@ -349,28 +364,28 @@ apps:
       - desktop
   vulkaninfo:
     command-chain: [bin/desktop-launch]
-    command: usr/bin/vulkaninfo
+    command: bin/vulkaninfo
     plugs:
       - opengl
       - x11
       - desktop
   vkcube:
     command-chain: [bin/desktop-launch]
-    command: usr/bin/vkcube
+    command: bin/vkcube
     plugs:
       - opengl
       - x11
       - desktop
   glxinfo:
     command-chain: [bin/desktop-launch]
-    command: usr/bin/glxinfo
+    command: bin/glxinfo
     plugs:
       - opengl
       - x11
       - desktop
   glxgears:
     command-chain: [bin/desktop-launch]
-    command: usr/bin/glxgears
+    command: bin/glxgears
     plugs:
       - opengl
       - x11
