Fixed tests so they actually reflect state of the system.  They were reporting success even when they failed.  Cleaned up some duplication and make the vulkan and glx utilities wrap the binaries providing from the gaming-graphics content interface.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -124,6 +124,10 @@ parts:
       cp glxinfo $CRAFT_PART_INSTALL/bin/
       cp glxgears $CRAFT_PART_INSTALL/bin/
       cp gpu $CRAFT_PART_INSTALL/bin/
+      cp vulkaninfo $CRAFT_PART_INSTALL/bin/
+      cp vkcube $CRAFT_PART_INSTALL/bin/
+      cp glxinfo $CRAFT_PART_INSTALL/bin/
+      cp glxgears $CRAFT_PART_INSTALL/bin/
 
   alsa-mixin:
     plugin: dump
