--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -42,6 +42,10 @@ layout:
     bind: $SNAP/graphics/libdrm
   /usr/share/drirc.d:
     bind: $SNAP/graphics/usr/share/drirc.d
+  /usr/lib/i386-linux-gnu:
+    bind: $SNAP/usr/lib/i386-linux-gnu
+  /usr/lib/x86_64-linux-gnu/dri:
+    bind: $SNAP/graphics/usr/lib/x86_64-linux-gnu/dri
   /usr/share/glvnd/egl_vendor.d:
     bind: $SNAP/graphics/usr/share/glvnd/egl_vendor.d
   /usr/lib/x86_64-linux-gnu/alsa-lib:
@@ -50,16 +54,10 @@ layout:
     bind: $SNAP/usr/share/alsa
   /usr/lib/x86_64-linux-gnu/libvulkan_intel.so:
     symlink: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libvulkan_intel.so
-  /usr/lib/i386-linux-gnu/libvulkan_intel.so:
-    symlink: $SNAP/graphics/usr/lib/i386-linux-gnu/libvulkan_intel.so
   /usr/lib/x86_64-linux-gnu/libvulkan_lvp.so:
     symlink: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libvulkan_lvp.so
-  /usr/lib/i386-linux-gnu/libvulkan_lvp.so:
-    symlink: $SNAP/graphics/usr/lib/i386-linux-gnu/libvulkan_lvp.so
   /usr/lib/x86_64-linux-gnu/libvulkan_radeon.so:
     symlink: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libvulkan_radeon.so
-  /usr/lib/i386-linux-gnu/libvulkan_radeon.so:
-    symlink: $SNAP/graphics/usr/lib/i386-linux-gnu/libvulkan_radeon.so
   /usr/lib/x86_64-linux-gnu/libxcb-dri3.so.0.0.0:
     symlink: $SNAP/graphics/usr/lib/x86_64-linux-gnu/libxcb-dri3.so.0.0.0
   /usr/lib/x86_64-linux-gnu/libxcb-dri3.so.0:
@@ -107,8 +105,8 @@ hooks:
       - opengl
 
 environment:
-  LD_LIBRARY_PATH: $SNAP/graphics/lib/i386-linux-gnu:$SNAP/graphics/usr/lib:$SNAP/usr/lib/i386-linux-gnu:$SNAP/lib/i386-linux-gnu:$SNAP/usr/lib/i386-linux-gnu/pulseaudio${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
-  LIBGL_DRIVERS_PATH: $SNAP/graphics/usr/lib/i386-linux-gnu/dri:$SNAP/graphics/usr/lib/x86_64-linux-gnu/dri:${LIBGL_DRIVERS_PATH:+:$LIBGL_DRIVERS_PATH}
+  LD_LIBRARY_PATH: $SNAP/graphics/lib:$SNAP/graphics/usr/lib:$SNAP/usr/lib/i386-linux-gnu:$SNAP/lib/i386-linux-gnu:$SNAP/usr/lib/i386-linux-gnu/pulseaudio${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
+  LIBGL_DRIVERS_PATH: $SNAP/graphics/lib/i386-linux-gnu/dri:$SNAP/graphics/lib/x86_64-linux-gnu/dri:$SNAP/graphics/usr/lib/i386-linux-gnu/dri:$SNAP/graphics/usr/lib/x86_64-linux-gnu/dri:${LIBGL_DRIVERS_PATH:+:$LIBGL_DRIVERS_PATH}
 
 parts:
   launcher:
@@ -119,10 +117,6 @@ parts:
       cp steam-snap.sh $CRAFT_PART_INSTALL/bin/
       cp desktop-launch $CRAFT_PART_INSTALL/bin/
       cp steamreport $CRAFT_PART_INSTALL/bin/
-      cp vulkaninfo $CRAFT_PART_INSTALL/bin/
-      cp vkcube $CRAFT_PART_INSTALL/bin/
-      cp glxinfo $CRAFT_PART_INSTALL/bin/
-      cp glxgears $CRAFT_PART_INSTALL/bin/
 
   alsa-mixin:
     plugin: dump
@@ -218,11 +212,8 @@ parts:
   debug-tools:
     plugin: nil
     stage-packages:
-      - jq
-    prime:
-      - usr/bin/jq
-      - usr/lib/*/libjq.so*
-      - usr/lib/*/libonig.so*
+      - vulkan-tools
+      - mesa-utils
 
   tests:
     plugin: dump
@@ -251,10 +242,6 @@ parts:
       - libpci3
       - libvulkan1:i386
       - libvulkan1:amd64
-      - libxml2:i386
-      - libxml2:amd64
-      - libicu70:i386
-      - libicu70:amd64
       - zlib1g:i386
       - zlib1g:amd64
       - xdg-utils
@@ -283,15 +270,6 @@ parts:
       - -usr/share/gdb
       - -usr/share/emacs*
       - -usr/share/lintian
-      - -usr/share/drirc.d
-      - -usr/share/vulkan
-      - -usr/share/Xsession.d
-      - -usr/lib/*/dri
-      - -usr/lib/*/vdpau
-      - -usr/lib/*/libvkd3d*
-      - -usr/lib/*/libvulkan*
-      - -usr/lib/*/libVk*
-      - -usr/lib/*/libLLVM*
     build-snaps: [core22]
     override-prime: |
       craftctl default
@@ -370,28 +348,28 @@ apps:
       - desktop
   vulkaninfo:
     command-chain: [bin/desktop-launch]
-    command: bin/vulkaninfo
+    command: usr/bin/vulkaninfo
     plugs:
       - opengl
       - x11
       - desktop
   vkcube:
     command-chain: [bin/desktop-launch]
-    command: bin/vkcube
+    command: usr/bin/vkcube
     plugs:
       - opengl
       - x11
       - desktop
   glxinfo:
     command-chain: [bin/desktop-launch]
-    command: bin/glxinfo
+    command: usr/bin/glxinfo
     plugs:
       - opengl
       - x11
       - desktop
   glxgears:
     command-chain: [bin/desktop-launch]
-    command: bin/glxgears
+    command: usr/bin/glxgears
     plugs:
       - opengl
       - x11
