Use lspci instead of lshw

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -123,6 +123,7 @@ parts:
       cp vkcube $CRAFT_PART_INSTALL/bin/
       cp glxinfo $CRAFT_PART_INSTALL/bin/
       cp glxgears $CRAFT_PART_INSTALL/bin/
+      cp gpu $CRAFT_PART_INSTALL/bin/
 
   alsa-mixin:
     plugin: dump
