--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -188,7 +188,7 @@ parts:
     after: [ninja]
     plugin: nil
     source: https://github.com/mesonbuild/meson.git
-    source-tag: "0.62.2"
+    source-tag: "1.0.1"
     override-build: |
       python3 -m pip install .
       mkdir -p $CRAFT_PART_INSTALL/usr/lib/python3/dist-packages
@@ -205,6 +205,7 @@ parts:
   mangohud:
     after: [ meson-deps ]
     source: https://github.com/flightlessmango/MangoHud.git
+    source-tag: "v0.6.8"
     plugin: meson
     organize:
       snap/steam/current/usr: usr
@@ -234,14 +235,17 @@ parts:
   mangohud64:
     after: [ meson-deps, mangohud ]
     source: https://github.com/flightlessmango/MangoHud.git
+    source-tag: "v0.6.8"
     plugin: meson
     organize:
       snap/steam/current/usr: usr
     meson-parameters:
       - --prefix=/usr
+      - -Dappend_libdir_mangohud=false
     stage:
       - -usr/bin/mangohud
       - -usr/share/vulkan/implicit_layer.d/MangoHud.json
+      - -usr/share/vulkan/implicit_layer.d/libMangoApp.json
 
   gamemode:
     after: [meson-deps]
