Unstage common paths

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -124,6 +124,9 @@ parts:
     stage-packages:
       - python3-gi
       - gir1.2-gtk-3.0
+    stage:
+      - -usr/bin/fc-*
+      - -usr/share/doc/fontconfig/fontconfig-user.*
 
   alsa-mixin:
     plugin: dump
