--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -343,8 +343,8 @@ parts:
       - -usr/lib/*/libLLVM*
     build-snaps: [core22]
     override-prime: |
-      craftctl default
       set -eux
+      craftctl default
       cp -a /snap/core22/current/usr/lib/i386-linux-gnu/* usr/lib/i386-linux-gnu/
 
   yaru-skin:
@@ -360,8 +360,24 @@ parts:
       - usr/share/fonts/truetype/ubuntu
       - usr/share/Steam/skins
 
-  cleanup:
+  conditioning:
     after: [steam]
+    plugin: nil
+    build-packages:
+      - shared-mime-info
+      - gtk-update-icon-cache
+    override-prime: |
+      set -eux
+      craftctl default
+      update-mime-database usr/share/mime
+      for dir in usr/share/icons/*; do
+        if [ -f "$dir/index.theme" ]; then
+          gtk-update-icon-cache --force "$dir"
+        fi
+      done
+
+  cleanup:
+    after: [steam, conditioning]
     plugin: nil
     build-snaps:
       - gaming-graphics-core22/kisak-fresh/candidate
@@ -371,7 +387,6 @@ parts:
       find . -type f,l -exec rm -f $CRAFT_PRIME/usr/lib/{} \;
       cd /snap/gaming-graphics-core22/current/usr/share
       find . -type f,l -exec rm -f $CRAFT_PRIME/usr/share/{} \;
-
 
 apps:
   steam:
